@@ -405,7 +405,8 @@ table.modals td.mod_7			{width:80px; padding-right:0;}
 table.modals td span.withdrawn	{display:inline-block; background-color:#545e73; font-size:10px; color:#ddd; margin-top:5px; margin-left:0;}
 
 /*	Chartist SVG	 */
-.showchart		{margin:0 auto; width:920px; height:240px; padding:10px 0 0 0; margin:0 0 30px -20px;}
+.showchart,
+.showcharts		{margin:0 auto; width:920px; height:240px; padding:10px 0 0 0; margin:0 0 30px -20px;}
 .ct-chart-line	{overflow:visible;}
 
 /*	Chart Legends	*/
