@@ -7,6 +7,7 @@ Update css for charts and legends
 Display budget and planned disbursement charts
 Update colours for charts
 Update result table
+Add line break to currency in charts
 
 
 Development Portal (2020-02-09 shi)
